<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_home_full"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_ring"
            android:title="@string/notifications" />

        <item
            android:id="@+id/nav_themes"
            android:icon="@drawable/ic_theme"
            android:title="@string/theme"
            app:actionLayout="@layout/theme_spinner_layout"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/project_info">
        <menu>
            <item
                android:id="@+id/nav_sponsor"
                android:title="@string/about_sponsor"
                android:icon="@drawable/ic_andela"/>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>