<FrameLayout android:layout_width="match_parent"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="120dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/details_fullname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="bottom|center_horizontal"
            android:text="@string/fullname"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?textColorMain"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/details_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/spacing_xxsmall"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/username"
            android:textColor="?textColorSub"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/details_contact_container"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/circle_holo">

                <ImageView
                    android:id="@+id/details_github_link"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/user_github_link"
                    android:paddingTop="4dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    app:srcCompat="@drawable/ic_github" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:background="@drawable/circle_holo">

                <ImageView
                    android:id="@+id/details_email_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/user_email_link"
                    android:paddingTop="4dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ButtonStyle"
                    android:layout_gravity="center"
                    android:paddingBottom="4dp"
                    android:paddingEnd="8dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingStart="8dp"
                    app:srcCompat="@drawable/ic_mail" />
            </FrameLayout>
        </LinearLayout>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            app:cardBackgroundColor="?colorPrimaryDark"
            app:cardCornerRadius="2dp"
            app:cardElevation="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/details_following_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ButtonStyle"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/following"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textColor="?textColorMain"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/following_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        tools:text="234"
                        android:textStyle="bold"
                        android:textColor="?colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    tools:background="?colorPrimary" />

                <LinearLayout
                    android:id="@+id/details_followers_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ButtonStyle"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/followers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/followers"
                        android:textColor="?textColorMain"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/followers_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        tools:text="234"
                        android:textStyle="bold"
                        android:textColor="?colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>

                <View
                    android:layout_width="3dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    tools:background="?colorPrimary" />

                <LinearLayout
                    android:id="@+id/details_repos_container"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:clickable="true"
                    android:focusable="true"
                    android:theme="@style/ButtonStyle"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/repos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repos"
                        android:textColor="?textColorMain"
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/repos_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="4dp"
                        tools:text="234"
                        android:textStyle="bold"
                        android:textColor="?colorAccent"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <com.ogaclejapan.smarttablayout.SmartTabLayout
        android:id="@+id/details_tab"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="bottom"
        android:paddingBottom="4dp"
        app:stl_defaultTabTextColor="?textColorMain"
        app:stl_defaultTabTextMinWidth="120dp"
        app:stl_indicatorAlwaysInCenter="true"
        app:stl_indicatorColor="?colorAccent"
        app:stl_indicatorCornerRadius="2.5dp"
        app:stl_indicatorInterpolation="smart"
        app:stl_indicatorThickness="3dp"
        app:stl_underlineColor="@android:color/transparent" />
</FrameLayout>