<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/button_card"
                style="@style/ButtonStyle"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="?colorAccent"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <TextView
                    android:id="@+id/find_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/find"
                    android:textAllCaps="false"
                    android:textColor="?textColorMain"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/edit_card"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/location_edit_text"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_location"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_location"
                    android:hint="@string/location"
                    android:inputType="textCapWords"
                    android:maxEms="1"
                    android:maxLines="1"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:textStyle="normal" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="?colorPrimary"
            android:paddingEnd="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <android.support.v7.widget.CardView
                android:id="@+id/language_card"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp">

                <EditText
                    android:id="@+id/language_edit_text"
                    style="@style/EditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/ic_filter"
                    android:drawablePadding="4dp"
                    android:drawableStart="@drawable/ic_filter"
                    android:hint="@string/language"
                    android:inputType="textCapWords"
                    android:maxEms="1"
                    android:maxLines="1"
                    android:paddingEnd="4dp"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:paddingStart="4dp"
                    android:textStyle="normal" />
            </android.support.v7.widget.CardView>
        </RelativeLayout>

        <ProgressBar
            android:id="@+id/home_progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/home_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            tools:listitem="@layout/list_item_user_grid" />

    </LinearLayout>

</RelativeLayout>

